[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "utils-library"
version = "0.1.0"
description = "Korbinian's personal Python utils (parallel, viz, io)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name="Korbinian" }
]
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy",
  "matplotlib"
]

[tool.setuptools.packages.find]
where = ["."]
